<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_general">

        <ListPreference
            android:key="pref_language"
            android:title="@string/pref_language_title"
            android:summary="@string/pref_language_summary"
            android:defaultValue="en"
            android:entries="@array/pref_language_entries"
            android:entryValues="@array/pref_language_values" />

        <ListPreference
            android:key="pref_theme_mode"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_summary"
            android:defaultValue="system"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values" />

    </PreferenceCategory>

</PreferenceScreen>
